external-crates/move/crates/move-compiler/tests/development/enums/matching/guard_binders.exp
error[E01002]: unexpected token
   ┌─ tests/development/enums/matching/guard_binders.move:19:32
   │
19 │             Option::Some(n) if n == &5 => *n,
   │                                ^
   │                                │
   │                                Unexpected 'n'
   │                                Expected '('

error[E01002]: unexpected token
   ┌─ tests/development/enums/matching/guard_binders.move:28:32
   │
28 │             Option::Some(n) if n == &5 => *n,
   │                                ^
   │                                │
   │                                Unexpected 'n'
   │                                Expected '('

